--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,26 @@
 h1 {
     color: red;
 }
+
+body {
+    background-color: black;
+}
+
+#searchBar {
+    text-align: center;
+    padding: 20px;
+}
+
+#search {
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+    border: 3px solid yellow;
+}
+
+#searchBtn {
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 10px;
+    border: 3px solid yellow;
+}
