--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,13 @@ body {
     border-radius: 10px;
     border: 3px solid yellow;
 }
+
+#repo-name {
+    color: white;
+    text-align: center;
+    padding: 20px;
+    width: 100px;
+    height: 100px;
+    border: 3px solid yellow;
+    border-radius: 10px;
+}
