--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,9 @@ body {
 #repo-name {
     color: yellow;
     font-size: 20px;
+    text-align: center;
     padding: 20px;
-    width: 100px;
+    width: 1300px;
     height: 100px;
     border: 3px solid yellow;
     border-radius: 10px;
