--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+
 #searchBar {
     width: 100%;
     height: 250px;
@@ -18,6 +19,12 @@
     border-radius: 10px;
     border: 3px solid yellow;
 }
+
+#app {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
 /* Card repositories */
 
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
@@ -34,33 +41,18 @@ body {
   background-image: url(https://images.unsplash.com/photo-1619204715997-1367fe5812f1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1889&q=80);
   background-size: cover;
   background-position: center;  
-  
-  display: flex;
-  align-items: center;
-  justify-content: center;    
-  height: 100vh;  
-}
-
-.container {
-  backdrop-filter: blur(16px) saturate(180%);
-  -webkit-backdrop-filter: blur(16px) saturate(180%);
-  background-color: rgba(17, 25, 40, 0.25);
-  border-radius: 12px;
-  border: 1px solid rgba(255, 255, 255, 0.125);  
-  padding: 38px;  
-  filter: drop-shadow(0 30px 10px rgba(0,0,0,0.125));
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content:center;
-  text-align: center;
-  
+  justify-content: center;
 }
 
 .wrapper {
-  width: 100%;
-  height: 100%;
-  
+    width: calc((100% / 5) - 20px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .banner-image {
@@ -68,7 +60,7 @@ body {
   background-position: center;
   background-size: cover;
   height: 300px;
-  width: 100%;
+  width: 300px;
   border-radius: 12px;
   border: 1px solid rgba(255,255,255, 0.255)
 }
@@ -83,7 +75,6 @@ h1{
 p {
   color: #fff;
   font-family: 'Lato', sans-serif;
-  text-align: center;
   font-size: 0.8rem;
   line-height: 150%;
   letter-spacing: 2px;
