--- a/css/style.css
+++ b/css/style.css
@@ -124,3 +124,21 @@ p {
 }
 
 /* ----------------------------------------------------- */
+
+/* img avatar style */
+
+.avatar-image {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 10px;
+}
+
+#searchType {
+    padding: 10px;
+    margin-right: 10px;
+    border-radius: 10px;
+    border: 3px solid yellow;
+}
+
+/* ------------------------------------------------------ */
