--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,13 @@
 }
 
 #app {
+    min-height: 200px;
+    width: 100%;
+    padding: 20px;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
+    border: 2px solid yellow;
 }
 /* Card repositories */
 
@@ -42,11 +46,15 @@ body {
 }
 
 .wrapper {
-    width: calc((100% / 5) - 20px);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+    width: calc((100% / 3) - 20px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    border-radius: 12px;
+    margin-bottom: 20px;
 }
 
 .banner-image {
@@ -73,6 +81,7 @@ p {
   line-height: 150%;
   letter-spacing: 2px;
   text-transform: uppercase;
+  text-align: center;
 }
 
 .button-wrapper{
