--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ body {
 }
 
 .wrapper {
+    display: block !important;
     width: calc((100% / 5) - 20px);
     display: flex;
     flex-direction: column;
