--- a/css/style.css
+++ b/css/style.css
@@ -23,11 +23,11 @@
 #app {
     min-height: 200px;
     width: 100%;
+    height: 100%;
     padding: 20px;
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    border: 2px solid yellow;
 }
 /* Card repositories */
 
