--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,8 @@
     flex-wrap: wrap;
     gap: 20px;
 }
+
+
 /* Card repositories */
 
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
@@ -46,8 +48,8 @@ body {
 }
 
 .wrapper {
-    display: block !important;
-    width: calc((100% / 5) - 20px);
+    width: 300px;
+    height: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
